<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="project1.csc296.project1.HangmanActivity">

    <FrameLayout
        android:id="@+id/frame_layout_scoreboard_fragment_hangman"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_hangman"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="8"
        android:gravity="center">

        <TextView
            android:id="@+id/text_view_game_word"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/placeholder_hangman_word"
            android:textSize="36sp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_text_char_guess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/guess_letter_hint"/>
            <Button
                android:id="@+id/button_guess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guess_button_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:background="#84c9b6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/letters_used_text"
                android:textSize="24sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/text_view_letters_guessed"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:textSize="20sp"
                android:gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_p1_guesses"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:text="@string/player_1_missed_guesses"
            android:gravity="center"/>
        <TextView
            android:id="@+id/text_view_p2_guesses"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:text="@string/player_2_missed_guesses"
            android:gravity="center"/>



    </LinearLayout>

    <Button
        android:text="NEXT PLAYER"
        android:id="@+id/button_next_player"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button_quit_hangman"
        android:text="QUIT"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
